--- a/ecommerce-project/admin/header.html
+++ b/ecommerce-project/admin/header.html
@@ -1,9 +1,10 @@
-<!-- header.html -->
-<header style="background-color: #333; color: white; padding: 15px; text-align: center;">
+<header>
+    <div class="logo">
+        <img src="/static/images/logo.png" alt="Company Logo" />
+        <span>My E-Commerce</span>
+    </div>
     <nav>
-        <a href="/" style="color: white; margin: 0 15px; text-decoration: none;">Home</a>
-        <a href="/admin/create" style="color: white; margin: 0 15px; text-decoration: none;">Create Admin</a>
-        <a href="/users" style="color: white; margin: 0 15px; text-decoration: none;">Users</a>
-        <a href="/orders" style="color: white; margin: 0 15px; text-decoration: none;">Orders</a>
+        <a href="/admin/register">Register as Admin</a>
+        <a href="/admin/login">Admin Login</a>
     </nav>
 </header>
